Trying to build a template

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,29 +9,30 @@
   <meta name="description" content="GoBoss">
   <meta name="author" content="https://github/raduq">
   <link rel="stylesheet" href="/static/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 </head>
 <body>
     <section>
 
         <div class="container">
-                
+
             <div class="jumbotron">
                 <h1 class="display-3">GoBoss</h1>
                 <p class="lead">Let's start this shit up.</p>
                 <hr class="my-4">
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Start</a>
-                    <a class="btn btn-dark btn-lg" href="#" role="button">Deploy</a>
-                    <a class="btn btn-dark btn-lg" href="#" role="button">Undeploy</a>
+                    <a class="btn btn-primary btn-lg" href="/goboss/start" role="button">Start</a>
+                    <a class="btn btn-dark btn-lg" href="/goboss/build" role="button">Deploy</a>
+                    <a class="btn btn-dark btn-lg" href="/goboss/unbuild" role="button">(Un)Deploy</a>
+                    <a class="btn btn-danger btn-lg" href="/goboss/kill" role="button">Kill</a>
                 </p>
             </div>
-                    
+
             </div>
 
         </div>
 
     </section>
-      
+
 </body>
 </html>
