Added clean button

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,12 @@
 
         <div class="container" >
 
-          <h1 class="display-1 text-light" ng-click="refresh()">GoBoss</h1>
+          <h1 class="display-1 text-light">GoBoss</h1>
           <hr class="my-4">
           <p>
               <button class="btn btn-success btn-lg" ng-click="start()" role="button"><i class="ion-power"></i> Start</button>
               <button class="btn btn-default btn-lg" ng-click="deploy()" role="button"><i class="ion-play"></i> Deploy</button>
-              <button class="btn btn-default btn-lg" ng-click="deploy()" role="button"><i class="ion-ios-close"></i> Clean</button>
+              <button class="btn btn-default btn-lg" ng-click="clean()" role="button"><i class="ion-ios-close"></i> Clean</button>
           </p>
 
         </div>
